Updated imagepage.html location of bg

--- a/imagepage.html
+++ b/imagepage.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-image:nasa-Q1p7bh3SHj8-unsplash.jpg /*url('/home/soorya/Downloads/nasa-Q1p7bh3SHj8-unsplash.jpg'); /* Path to your Earth image */
+            background-image:url('nasa-Q1p7bh3SHj8-unsplash.jpg'); /* Path to your Earth image */
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
